# mcp-examples

./: .gitignore  agents.yaml  server.py
01-mcp-study/: .gitignore  (+1 more)
01-mcp-study/2_client/: README.md  main.py  pyproject.toml  servers_config.json
01-mcp-study/2_client/src/chatbot/: interaction.py
01-mcp-study/2_client/src/client/: client.py
01-mcp-study/4_chromaDB/: .env-examples  README.md  main.py  pyproject.toml
01-mcp-study/4_chromaDB/src/chatbot/: interaction.py
01-mcp-study/4_chromaDB/src/client/: client.py
01-mcp-study/4_chromaDB/tests/: test_chroma.py
01-mcp-study/4_chromaDB/tools/: calculator_server.py  duckduckgo.py
01-mcp-study/bonus_auth/: .env-examples  README.md  pyproject.toml
01-mcp-study/bonus_auth/auth/: main.py
01-mcp-study/bonus_auth/client/: client.py
01-mcp-study/bonus_auth/tools/: print.py
mcp-flow/: .gitignore  Dockerfile.base  docker-compose.yml  main.py  pyproject.toml
mcp-flow/common/: Dockerfile.neo4j
mcp-flow/duckduckgo-agent/: Dockerfile  mcp_server.py
mcp-flow/duckduckgo-agent/core/: search_agent.py
mcp-flow/faiss-agent/: Dockerfile  config.yaml  mcp_server.py
mcp-flow/kubernetes-agent/: Dockerfile
mcp-flow/kubernetes-agent/core/: k8s_agent.py  k8s_api.py
mcp-flow/kubernetes-agent/tests/: test_k8s.py
mcp-flow/neo4j-server/: Dockerfile  config.yaml
mcp-flow/ollama-agent/: Dockerfile  mcp_agent.py  mcp_server.py
mcp-flow/ollama-agent/core/: llm_handler.py
mcp-flow/routers-server/: Dockerfile  config.yaml  mcp_server.py
mcp-flow/routers-server/core/: router.py
mcp-flow/utils/: base_server.py  errors.py  logging.py
(+68 files in other folders)
