[project]
name = "mcp-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.11.0",
    "httpx>=0.28.1",
    "kubernetes>=32.0.1",
    "mcp[cli]>=1.6.0",
    "neo4j>=5.28.1",
    "ollama>=0.4.8",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.7",
]
