[project]
name = "2-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.5.1",
    "google-genai>=1.28.0",
    "mcp[cli]>=1.12.3",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "3_chromaDB",
]
